@@ -1,9 +1,9 @@
 name=FastAccelStepper
-version=pre-0.13.0
+version=0.13.0
 license=MIT
 author=Jochen Kiemes <jochen@kiemes.de>
 maintainer=Jochen Kiemes <jochen@kiemes.de>
-sentence=A high speed stepper library for Atmega 328p (nano) and ESP32
+sentence=A high speed stepper library for Atmega 328p (nano), 2560 and ESP32
 paragraph=Drive stepper motors with acceleration/deceleration profile up to 25 kSteps/s (Atmega) and 200kSteps/s (esp32).
 url=https://github.com/gin66/FastAccelStepper
 repository=https://github.com/gin66/FastAccelStepper.git
